fix horizontal scroll

--- a/styles/hero.css
+++ b/styles/hero.css
@@ -34,12 +34,6 @@
     line-height: 120%;
     letter-spacing: -1.5px;
   }
-  .hero__image {
-    width: 100%;
-    height: 400px;
-    background: url("../resources/img/content/hero/003-tablet.jpg") 100% / cover
-      no-repeat;
-  }
   .hero__text {
     left: 40px;
     bottom: 30px;
